# ber-public

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  0  README.md  README.rst  appveyor.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
ber_public/: __main__.py  _version.py  archetype.py  calc.py  cli.py  convert.py  download.py  read.py  request.json
ber_public/deap/: fab.py  vent.py
berpublicsearch/: convert.py  download.py  dtypes.json  flow.py
conda.recipe/: meta.yaml
notebooks/: apply-filters.ipynb  deap.ipynb  filters.ipynb  get-boilers-by-postcode.ipynb  heat-loss-parameter.ipynb  sandbox.ipynb  setup-sandbox.ipynb  setup.ipynb
tests/: setup.py  test_archetype.py  test_calc.py  test_cli.py
tests/deap/: conftest.py  test_fab.py  test_htuse.py  test_vent.py
tests/test_calc/: annual_heat_loss.csv  fabric_heat_loss.csv  heat_loss_coefficient.csv  heat_loss_parameter.csv  ventilation_heat_loss.csv
