[tool.poetry]
name = "berpublicsearch"
version = "0.1.0"
description = ""
authors = ["Rowan Molony <rowan.molony@codema.ie>"]

[tool.poetry.dependencies]
python = "^3.6.1 || ^3.7"
tqdm = "^4.54.1"
dask = {extras = ["dataframe"], version = "^2020.12.0"}
requests = "^2.25.0"
pyarrow = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
