[tool.poetry]
name = "berpublicsearch"
version = "0.2.1"
description = ""
authors = ["Rowan Molony <rowan.molony@codema.ie>"]

[tool.poetry.dependencies]
python = "^3.6.1 || ^3.7"
tqdm = "^4.54.1"
dask = {extras = ["dataframe"], version = "^2020.12.0"}
requests = "^2.25.0"
pyarrow = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
