[tool.poetry]
name = "berpublicsearch"
version = "0.2.4"
description = "Explore SEAI's BER Public search database with Python"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
repository = "https://github.com/codema-dev/berpublicsearch" 
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1 || ^3.7"
tqdm = "^4.54.1"
dask = {extras = ["dataframe"], version = "^2021"}
requests = "^2.25.0"
pyarrow = "^3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
